--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title> Hello Coursera! </title>
+	<title> Hello ethiopian</title>
 </head>
 <body>
 <h1> Hello Coursera! </h1>
